...
        
        self.view.addSubview(activityIndicator)
        
        //initialize the viewModel passing it a closure to call when the viewModel has new data
        //in this case, we pass in the view controller's reloadCollectionViewData method
        viewModel = NowPlayingViewModel(reloadCollectionViewCallback: reloadCollectionViewData)
        self.navigationItem.title = "Now Playing Movies"
        
    }
    
    //method is called by the viewModel when it has new data
    func reloadCollectionViewData(success:Bool, error:String){
        if success {
...
